# IUBPatchLib

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_bps.cc  bench_io.cc  bench_ips.cc  bench_ups.cc
cmake/: ExportIUB.cmake  FindIUBPatch.cmake  iubpatchConfig.cmake.in
examples/: CMakeLists.txt  batch_patch.cc  patch_info.cc  simple_patch.cc
include/iubpatch/: api.h  apply.h  crc32.h  errors.h  io.h  options.h  patch.h  version.h.in
include/iubpatch/formats/: bps.h  ips.h  ups.h
packaging/: .gitignore  CMakeLists.txt  build-deb.sh  build-rpm.sh  iubpatch.pc.in  iubpatch.spec.in
packaging/debian/: control  copyright  iubpatch-tools.install  libiubpatch-dev.install  libiubpatch0.install  rules
src/: CMakeLists.txt  apply.cc  io.cc  patch_base.cc
src/formats/: bps.cc  ips.cc  ups.cc
src/platform/: mmap_posix.cc  mmap_windows.cc
tests/: CMakeLists.txt  test_apply.cc  test_bps.cc  test_errors.cc  test_io.cc  test_ips.cc  test_main.cc  test_ups.cc
tools/: CMakeLists.txt  iubpatch_cli.cc
